--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
 	"root": true,
 	"extends": [
-		"wikimedia/client-es5",
+		"wikimedia/client",
 		"wikimedia/jquery",
 		"wikimedia/mediawiki"
 	],
@@ -19,6 +19,9 @@
 		"max-statements-per-line": "warn",
 		"no-jquery/variable-pattern": "warn",
 		"no-jquery/no-fade": "warn",
-		"no-jquery/no-global-selector": "warn"
+		"no-jquery/no-global-selector": "warn",
+		"no-jquery/no-done-fail": "warn",
+		"prefer-const": "warn",
+		"no-var": "warn"
 	}
 }
